app-repos/careerforge/kustomize/overlays/openstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: careerforge-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://my-career.k8s.openstack.lupulup.com,https://cc-career.k8s.openstack.lupulup.com,https://admin-career.k8s.openstack.lupulup.com"
    pangolin.io/expose: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api-employee.k8s.openstack.lupulup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-service
                port:
                  number: 8002
    - host: api-coach.k8s.openstack.lupulup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coach-service
                port:
                  number: 8003
    - host: api-admin.k8s.openstack.lupulup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8000
